# SnapShot

./: .gitignore  API_DOCUMENTATION.md  PYTHON_SETUP.md  README.md  index.html  index.js  main.py  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  run.py  script.js  styles.css  tailwind.config.ts  test.html
public/: index.html  script.js  styles.css  test.html
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/album-url/: route.ts
src/app/api/photos/: route.ts
src/app/api/photos/[filename]/: route.ts
src/app/gallery/: page.tsx
src/components/: Camera.tsx  FilterSelector.tsx  Header.tsx  PhotoCard.tsx  QRCode.tsx  RecentPhotos.tsx  ThemeProvider.tsx  ThemeToggle.tsx  TimerSlider.tsx
